; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_puttextmessage.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqformat.c_pq_puttextmessage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pq_puttextmessage(i8 signext %0, i8* %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8 %0, i8* %3, align 1
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @strlen(i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i8* @pg_server_to_client(i8* %9, i32 %10)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %12, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load i8, i8* %3, align 1
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @strlen(i8* %18)
  %20 = add nsw i32 %19, 1
  %21 = call i32 @pq_putmessage(i8 signext %16, i8* %17, i32 %20)
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @pfree(i8* %22)
  br label %30

24:                                               ; preds = %2
  %25 = load i8, i8* %3, align 1
  %26 = load i8*, i8** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  %29 = call i32 @pq_putmessage(i8 signext %25, i8* %26, i32 %28)
  br label %30

30:                                               ; preds = %24, %15
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @pg_server_to_client(i8*, i32) #1

declare dso_local i32 @pq_putmessage(i8 signext, i8*, i32) #1

declare dso_local i32 @pfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
